# secure_socket

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  LICENSE  NOTES.md  README.md  build.sh  coverage.sh  parameters.conf  sonar-project.properties
include/: broker_types.h  context.h  handler.h  ipc_socket.h  log.h  logging.h  secure_socket_base.h  secure_socket_types.h  threaded_server.h  tools.h  vars.h
src/: client_test.py  context.c  handler.c  ipc_socket.c  log.c  main.c  secure_socket_base.c  secure_socket_base.h  threaded_server.c  tools.c  tools.h
